Fix wrong color reference

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -329,7 +329,7 @@
     border-radius: $radius;
 
     &::placeholder {
-        color: $color-text-gray;
+        color: $color-text-gray-light;
     }
 }
 
